...
                                <color key="backgroundColor" red="0.32563561200000002" green="0.58304631709999999" blue="0.63530498739999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignUPButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9dE-g0-YpD"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                <state key="normal" title="SIGN UP">
                                    <color key="titleColor" red="0.98568934200000002" green="0.97128778699999996" blue="0.5371629" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
                                <connections>
                                    <segue destination="qAU-no-F1x" kind="show" identifier="Signup" id="DIo-F4-gav"/>
                                </connections>
                            </button>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKh-IC-ADe">
                                        <rect key="frame" x="169" y="0.0" width="44" height="28"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                        <state key="normal" title="LOG IN">
                                            <color key="titleColor" systemColor="linkColor"/>
                                        </state>
                                        <connections>
                                            <segue destination="VCm-Km-Rw2" kind="show" identifier="Login" id="bEj-yu-rof"/>
                                        </connections>
                                    </button>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create your account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaM-Wt-ALI">
                                                <rect key="frame" x="0.0" y="0.0" width="332" height="51"/>
                                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="34"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PfA-Eu-3EN">
                                                <rect key="frame" x="0.0" y="66" width="332" height="51"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="EmailTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cfQ-3l-dj0">
                                                <rect key="frame" x="0.0" y="132" width="332" height="51"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PasswordTextFied"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mZI-nl-hIg">
                                                <rect key="frame" x="0.0" y="198" width="332" height="51"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PhonenumberTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ol7-Lg-sMM">
                                                <rect key="frame" x="0.0" y="264" width="332" height="51"/>
                                                <color key="backgroundColor" red="0.32563561200000002" green="0.58304631709999999" blue="0.63530498739999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SignUpNewAccount" label="Sign UP"/>
                                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                                <state key="normal" title="Sign Up">
                                                    <color key="titleColor" red="0.98568934200000002" green="0.97128778699999996" blue="0.5371629" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
                                                <connections>
                                                    <action selector="signUpButtonTapped:" destination="qAU-no-F1x" eventType="touchUpInside" id="Tws-yw-eie"/>
                                                </connections>
                                            </button>
...
