...
            switch result {
            case .success(let success):
                print("Was successfule sign in: \(success)")
                self.performSegue(withIdentifier: "LoginHomeView", sender: nil)
            case .failure(let error):
                DispatchQueue.main.async {
                    self.presentUserInfoAlert(title: "Error", message: "\(error.localizedDescription)")
                }
                print("Failed to sign in: \(error)")
            }
        }
    }
}
...
